test_regress/t/t_mailbox_bad.out
%Error: t/t_mailbox_bad.v:8:4: Can't find typedef: 'mailbox'
    8 |    mailbox #(int) m;
      |    ^~~~~~~
%Error: Internal Error: t/t_mailbox_bad.v:8:14: ../V3LinkDot.cpp:#: Pin not under instance?
    8 |    mailbox #(int) m;
      |              ^~~
